# Socker

./: CMakeLists.txt  README.md
docs/: CompteRendu.md  Documentation.md  report.md
include/: client.h  config.h  endpoint.h  log.h  server.h  utils.h
src/: client.c  endpoint.c  log.c  server.c  utils.c
test/: test_client.c  test_server.c
test/http_client/: http_client.c
test/mode_concurrent/mono_service/: mono_service_server.c
test/mode_concurrent/multi_service/: echo_client.c  multi_service_server.c  random_client.c  time_client.c
test/mode_connecte_tcp/: tcp_client.c  tcp_server.c
test/mode_non_connecte_udp/: udp_client.c  udp_server.c
